--- a/app/src/main/res/layout/activity_section_vhc4.xml
+++ b/app/src/main/res/layout/activity_section_vhc4.xml
@@ -34,6 +34,7 @@
             android:theme="@style/ToolbarTheme"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
             app:title="@string/secv4title"
+            app:subtitle="@string/secvnote"
             app:titleTextAppearance="@style/Toolbar.TitleText" />
 
 
