--- a/app/src/main/res/layout/activity_section_vhc4.xml
+++ b/app/src/main/res/layout/activity_section_vhc4.xml
@@ -231,6 +231,66 @@
                 </androidx.cardview.widget.CardView>
 
 
+                <!-- v404  Radio   -->
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/fldGrpCVv404"
+                    style="@style/cardView">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/bottom"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                style="@style/quesNum"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:text="@string/Q_v404" />
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:text="@string/v404" />
+
+                        </LinearLayout>
+
+                        <RadioGroup
+                            android:id="@+id/v404"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <RadioButton
+                                android:id="@+id/v404a"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:checked="@{vhc.v404.equals(`1`)}"
+                                android:onClick="@{()->vhc.setV404(`1`)}"
+                                android:text="@string/v404a" />
+
+                            <RadioButton
+                                android:id="@+id/v404b"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:checked="@{vhc.v404.equals(`2`)}"
+                                android:onClick="@{()->vhc.setV404(`2`)}"
+                                android:text="@string/v404b" />
+
+                        </RadioGroup>
+
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+
 
 
                 <!-- v405  Radio   -->
