activity_section_vhc4.xml v406 layoutChanges

--- a/app/src/main/res/layout/activity_section_vhc4.xml
+++ b/app/src/main/res/layout/activity_section_vhc4.xml
@@ -411,6 +411,66 @@
                 </androidx.cardview.widget.CardView>
 
 
+                <!-- v407  Radio   -->
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/fldGrpCVv407"
+                    style="@style/cardView">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/bottom"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                style="@style/quesNum"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:text="@string/Q_v407" />
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:text="@string/v407" />
+
+                        </LinearLayout>
+
+                        <RadioGroup
+                            android:id="@+id/v407"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal">
+
+                            <RadioButton
+                                android:id="@+id/v407a"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:checked="@{vhc.v407.equals(`1`)}"
+                                android:onClick="@{()->vhc.setV407(`1`)}"
+                                android:text="@string/v407a" />
+
+                            <RadioButton
+                                android:id="@+id/v407b"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:checked="@{vhc.v407.equals(`2`)}"
+                                android:onClick="@{()->vhc.setV407(`2`)}"
+                                android:text="@string/v407b" />
+
+                        </RadioGroup>
+
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+
 
                 <!-- v408  Radio   -->
                 <androidx.cardview.widget.CardView
