--- a/app/src/main/res/layout/activity_section_vhc4.xml
+++ b/app/src/main/res/layout/activity_section_vhc4.xml
@@ -831,16 +831,10 @@
                 </androidx.cardview.widget.CardView>
 
 
-
                 <!-- v414  Input   -->
                 <androidx.cardview.widget.CardView
                     android:id="@+id/fldGrpCVv414"
                     style="@style/cardView">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -855,20 +849,24 @@
                                 android:text="@string/Q_v414" />
 
                             <TextView
+                                android:layout_width="200dp"
+                                android:layout_height="match_parent"
+                                android:gravity="center"
+                                android:text="@string/v414" />
+
+                            <EditText
+                                android:id="@+id/v414"
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
-                                android:layout_weight="1"
-                                android:text="@string/v414" />
+                                android:gravity="center"
+                                android:hint="@string/v414"
+                                android:text="@={vhc.v414}" />
+
                         </LinearLayout>
 
-                        <EditText
-                            android:id="@+id/v414"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/v414"
-                            android:text="@={vhc.v414}" />
-                    </LinearLayout>
                 </androidx.cardview.widget.CardView>
+
+
 
 
                 <!--EndButton LinearLayout-->
