activity_section_vhc4.xml v414 layoutChanges

--- a/app/src/main/res/layout/activity_section_vhc4.xml
+++ b/app/src/main/res/layout/activity_section_vhc4.xml
@@ -858,6 +858,7 @@
                                 android:id="@+id/v414"
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
+                                android:layout_weight="1"
                                 android:gravity="center"
                                 android:hint="@string/v414"
                                 android:text="@={vhc.v414}" />
