--- a/app/src/main/res/layout/activity_section_d.xml
+++ b/app/src/main/res/layout/activity_section_d.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="form"
-            type="edu.aku.hassannaqvi.chese.data.model.Form" />
+            type="edu.aku.hassannaqvi.chese.data.model.Forms" />
 
         <variable
             name="callback"
