--- a/app/src/main/res/layout/activity_section_wsg4.xml
+++ b/app/src/main/res/layout/activity_section_wsg4.xml
@@ -2309,7 +2309,7 @@
 
 
                 <!-- ws408 -->
-                <androidx.cardview.widget.CardView
+                <!--<androidx.cardview.widget.CardView
                     android:id="@+id/fldGrpCVws408"
                     style="@style/cardView">
 
@@ -2337,7 +2337,7 @@
 
                         </LinearLayout>
 
-                        <!-- ws408a -->
+                        &lt;!&ndash; ws408a &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws408a"
                             android:layout_width="match_parent"
@@ -2371,7 +2371,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws408b -->
+                        &lt;!&ndash; ws408b &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws408b"
                             android:layout_width="match_parent"
@@ -2405,7 +2405,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws408c -->
+                        &lt;!&ndash; ws408c &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws408c"
                             android:layout_width="match_parent"
@@ -2439,7 +2439,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws408d -->
+                        &lt;!&ndash; ws408d &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws408d"
                             android:layout_width="match_parent"
@@ -2473,7 +2473,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws408e -->
+                        &lt;!&ndash; ws408e &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws408e"
                             android:layout_width="match_parent"
@@ -2507,7 +2507,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws408f -->
+                        &lt;!&ndash; ws408f &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws408f"
                             android:layout_width="match_parent"
@@ -2541,7 +2541,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws408g -->
+                        &lt;!&ndash; ws408g &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws408g"
                             android:layout_width="match_parent"
@@ -2575,7 +2575,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws408h -->
+                        &lt;!&ndash; ws408h &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws408h"
                             android:layout_width="match_parent"
@@ -2614,7 +2614,7 @@
                 </androidx.cardview.widget.CardView>
 
 
-                <!-- ws409 -->
+                &lt;!&ndash; ws409 &ndash;&gt;
                 <androidx.cardview.widget.CardView
                     android:id="@+id/fldGrpCVws409"
                     style="@style/cardView">
@@ -2643,7 +2643,7 @@
 
                         </LinearLayout>
 
-                        <!-- ws409a -->
+                        &lt;!&ndash; ws409a &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws409a"
                             android:layout_width="match_parent"
@@ -2684,7 +2684,7 @@
                             android:gravity="center"
                             android:text="@string/ws409t2" />
 
-                        <!-- ws409b -->
+                        &lt;!&ndash; ws409b &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws409b"
                             android:layout_width="match_parent"
@@ -2718,7 +2718,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws409c -->
+                        &lt;!&ndash; ws409c &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws409c"
                             android:layout_width="match_parent"
@@ -2752,7 +2752,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws409d -->
+                        &lt;!&ndash; ws409d &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws409d"
                             android:layout_width="match_parent"
@@ -2786,7 +2786,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws409e -->
+                        &lt;!&ndash; ws409e &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws409e"
                             android:layout_width="match_parent"
@@ -2827,7 +2827,7 @@
                             android:gravity="center"
                             android:text="@string/ws409t3" />
 
-                        <!-- ws409f -->
+                        &lt;!&ndash; ws409f &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws409f"
                             android:layout_width="match_parent"
@@ -2861,7 +2861,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws409g -->
+                        &lt;!&ndash; ws409g &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws409g"
                             android:layout_width="match_parent"
@@ -2895,7 +2895,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws409h -->
+                        &lt;!&ndash; ws409h &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws409h"
                             android:layout_width="match_parent"
@@ -2929,7 +2929,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws409i -->
+                        &lt;!&ndash; ws409i &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws409i"
                             android:layout_width="match_parent"
@@ -2968,7 +2968,7 @@
                 </androidx.cardview.widget.CardView>
 
 
-                <!-- ws410 -->
+                &lt;!&ndash; ws410 &ndash;&gt;
                 <androidx.cardview.widget.CardView
                     android:id="@+id/fldGrpCVws410"
                     style="@style/cardView">
@@ -2997,7 +2997,7 @@
 
                         </LinearLayout>
 
-                        <!-- ws410a -->
+                        &lt;!&ndash; ws410a &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws410a"
                             android:layout_width="match_parent"
@@ -3031,7 +3031,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws410b -->
+                        &lt;!&ndash; ws410b &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws410b"
                             android:layout_width="match_parent"
@@ -3065,7 +3065,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws410c -->
+                        &lt;!&ndash; ws410c &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws410c"
                             android:layout_width="match_parent"
@@ -3099,7 +3099,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws410d -->
+                        &lt;!&ndash; ws410d &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws410d"
                             android:layout_width="match_parent"
@@ -3133,7 +3133,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws410e -->
+                        &lt;!&ndash; ws410e &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws410e"
                             android:layout_width="match_parent"
@@ -3172,7 +3172,7 @@
                 </androidx.cardview.widget.CardView>
 
 
-                <!-- ws411 -->
+                &lt;!&ndash; ws411 &ndash;&gt;
                 <androidx.cardview.widget.CardView
                     android:id="@+id/fldGrpCVws411"
                     style="@style/cardView">
@@ -3201,7 +3201,7 @@
 
                         </LinearLayout>
 
-                        <!-- ws411a -->
+                        &lt;!&ndash; ws411a &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws411a"
                             android:layout_width="match_parent"
@@ -3235,7 +3235,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws411b -->
+                        &lt;!&ndash; ws411b &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws411b"
                             android:layout_width="match_parent"
@@ -3276,7 +3276,7 @@
                             android:gravity="center"
                             android:text="@string/ws411t2" />
 
-                        <!-- ws411c -->
+                        &lt;!&ndash; ws411c &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws411c"
                             android:layout_width="match_parent"
@@ -3310,7 +3310,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws411d -->
+                        &lt;!&ndash; ws411d &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws411d"
                             android:layout_width="match_parent"
@@ -3344,7 +3344,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws411e -->
+                        &lt;!&ndash; ws411e &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws411e"
                             android:layout_width="match_parent"
@@ -3378,7 +3378,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws411f -->
+                        &lt;!&ndash; ws411f &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws411f"
                             android:layout_width="match_parent"
@@ -3412,7 +3412,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws411g -->
+                        &lt;!&ndash; ws411g &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws411g"
                             android:layout_width="match_parent"
@@ -3451,7 +3451,7 @@
                 </androidx.cardview.widget.CardView>
 
 
-                <!-- ws412 -->
+                &lt;!&ndash; ws412 &ndash;&gt;
                 <androidx.cardview.widget.CardView
                     android:id="@+id/fldGrpCVws412"
                     style="@style/cardView">
@@ -3480,7 +3480,7 @@
 
                         </LinearLayout>
 
-                        <!-- ws412a -->
+                        &lt;!&ndash; ws412a &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws412a"
                             android:layout_width="match_parent"
@@ -3514,7 +3514,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws412b -->
+                        &lt;!&ndash; ws412b &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws412b"
                             android:layout_width="match_parent"
@@ -3555,7 +3555,7 @@
                             android:gravity="center"
                             android:text="@string/ws412t2" />
 
-                        <!-- ws412c -->
+                        &lt;!&ndash; ws412c &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws412c"
                             android:layout_width="match_parent"
@@ -3589,7 +3589,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws412d -->
+                        &lt;!&ndash; ws412d &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws412d"
                             android:layout_width="match_parent"
@@ -3623,7 +3623,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws412e -->
+                        &lt;!&ndash; ws412e &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws412e"
                             android:layout_width="match_parent"
@@ -3657,7 +3657,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws412f -->
+                        &lt;!&ndash; ws412f &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws412f"
                             android:layout_width="match_parent"
@@ -3696,7 +3696,7 @@
                 </androidx.cardview.widget.CardView>
 
 
-                <!-- ws413 -->
+                &lt;!&ndash; ws413 &ndash;&gt;
                 <androidx.cardview.widget.CardView
                     android:id="@+id/fldGrpCVws413"
                     style="@style/cardView">
@@ -3732,7 +3732,7 @@
                             android:gravity="center"
                             android:text="@string/ws413t2" />
 
-                        <!-- ws413a -->
+                        &lt;!&ndash; ws413a &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws413a"
                             android:layout_width="match_parent"
@@ -3766,7 +3766,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws413b -->
+                        &lt;!&ndash; ws413b &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws413b"
                             android:layout_width="match_parent"
@@ -3800,7 +3800,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws413c -->
+                        &lt;!&ndash; ws413c &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws413c"
                             android:layout_width="match_parent"
@@ -3834,7 +3834,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws413d -->
+                        &lt;!&ndash; ws413d &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws413d"
                             android:layout_width="match_parent"
@@ -3875,7 +3875,7 @@
                             android:gravity="center"
                             android:text="@string/ws413t3" />
 
-                        <!-- ws413e -->
+                        &lt;!&ndash; ws413e &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws413e"
                             android:layout_width="match_parent"
@@ -3909,7 +3909,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws413f -->
+                        &lt;!&ndash; ws413f &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws413f"
                             android:layout_width="match_parent"
@@ -3943,7 +3943,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws413g -->
+                        &lt;!&ndash; ws413g &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws413g"
                             android:layout_width="match_parent"
@@ -3982,7 +3982,7 @@
                 </androidx.cardview.widget.CardView>
 
 
-                <!-- ws414 -->
+                &lt;!&ndash; ws414 &ndash;&gt;
                 <androidx.cardview.widget.CardView
                     android:id="@+id/fldGrpCVws414"
                     style="@style/cardView">
@@ -4018,7 +4018,7 @@
                             android:gravity="center"
                             android:text="@string/ws414t2" />
 
-                        <!-- ws414a -->
+                        &lt;!&ndash; ws414a &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws414a"
                             android:layout_width="match_parent"
@@ -4052,7 +4052,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws414b -->
+                        &lt;!&ndash; ws414b &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws414b"
                             android:layout_width="match_parent"
@@ -4086,7 +4086,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws414c -->
+                        &lt;!&ndash; ws414c &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws414c"
                             android:layout_width="match_parent"
@@ -4120,7 +4120,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws414d -->
+                        &lt;!&ndash; ws414d &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws414d"
                             android:layout_width="match_parent"
@@ -4154,7 +4154,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws414e -->
+                        &lt;!&ndash; ws414e &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws414e"
                             android:layout_width="match_parent"
@@ -4188,7 +4188,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws414f -->
+                        &lt;!&ndash; ws414f &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws414f"
                             android:layout_width="match_parent"
@@ -4229,7 +4229,7 @@
                             android:gravity="center"
                             android:text="@string/ws414t3" />
 
-                        <!-- ws414g -->
+                        &lt;!&ndash; ws414g &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws414g"
                             android:layout_width="match_parent"
@@ -4263,7 +4263,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws414h -->
+                        &lt;!&ndash; ws414h &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws414h"
                             android:layout_width="match_parent"
@@ -4297,7 +4297,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws414i -->
+                        &lt;!&ndash; ws414i &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws414i"
                             android:layout_width="match_parent"
@@ -4331,7 +4331,7 @@
 
                         </RadioGroup>
 
-                        <!-- ws414j -->
+                        &lt;!&ndash; ws414j &ndash;&gt;
                         <RadioGroup
                             android:id="@+id/ws414j"
                             android:layout_width="match_parent"
@@ -4367,7 +4367,7 @@
 
                     </LinearLayout>
 
-                </androidx.cardview.widget.CardView>
+                </androidx.cardview.widget.CardView>-->
 
 
                 <!--EndButton LinearLayout-->
